quick fix min witdh was breaking on small devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -435,7 +435,6 @@ span{
     }
     .data-list-row{
         min-height: 2em;
-        min-width: fit-content;
         overflow-y: scroll;
         padding: 10px;
         overflow: hidden;
